[package]
name = "sol-morning"
version = "0.1.0"
edition = "2021"
description = "Solana Morning Aggregator"
license = "Apache-2.0"
authors = ["lihongjie arsenallihongjie<@gmail.com>"]
keywords = ["solana", "morning"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
market = { path = "./market" }
rocket = "0.4.10"
rocket_contrib = "0.4"
serde = "1.0.130"
serde_json = "1.0.64"
serde_derive = "1.0.126"
anyhow = "1.0.32"

solana-sdk = "1.8.5"
solana-client = "1.8.5"
solana-program = "1.8.5"

#spl-token = "3.2.0"
#spl-token-swap = "2.1.0"

rust_decimal = "1.16"
enumflags2 = "0.6.4"
bytemuck = "1.7.2"
arbitrary = "1.0.2"
arrayref = "0.3.6"
thiserror = "1.0.30"
num_enum = "0.5.4"
safe-transmute = "0.11.0"
num-derive = "0.3.3"
num-traits = "0.2.14"



