[package]
name = "market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.0"
solana-sdk = "1.9.0"
spl-token = "3.2.0"
arrayref = "0.3.6"
safe-transmute = "0.11.0"
bytemuck = "1.4.0"

serde = "1.0.130"
serde_json = "1.0.64"
serde_derive = "1.0.126"
anyhow = "1.0.32"
rust_decimal = "1.16"
uint = { version = "0.9.1", default-features = false }